remove bl_show_info call and enable config options for same

--- a/bl_mcu_sdk_bl808/Makefile
+++ b/bl_mcu_sdk_bl808/Makefile
@@ -46,7 +46,7 @@ SUPPORT_BLECONTROLLER_LIB?=std
 SUPPORT_FAST_WAKEUP?=n
 SUPPORT_USB_MODE?=device
 SUPPORT_DUALCORE?=n
-CONFIG_BL_SHOW_INFO?=n
+CONFIG_BL_SHOW_INFO?=y
 CONFIG_BL_FLASH_INIT?=n
 CONFIG_MEM_USE_FREERTOS?=n
 CONFIG_BUILD_TYPE?=debug
