--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@ bl_mcu_sdk_bl808/tools/bflb_flash_tool/chips/bl702/img_create_mcu/whole_img.bin
 bl_mcu_sdk_bl808/tools/bflb_flash_tool/chips/bl702/img_create_mcu/whole_img.pack
 bl_mcu_sdk_bl808/tools/bflb_flash_tool/img/project.bin
 bl_mcu_sdk_bl808/tools/bflb_flash_tool/log/*
+/.idea
